updated font on the entire website, spacing issues on mobile

--- a/public/css/communities.css
+++ b/public/css/communities.css
@@ -363,10 +363,6 @@ div.vote-interactions {
   display: flex;
 }
 
-.title>a {
-  color: var(--light-mode-bold-text-color);
-}
-
 
 
 #date-icon,
@@ -840,7 +836,7 @@ div.join-website {
   margin: 1.2rem;
   background: var(--light-mode-main-color);
   margin-bottom: 0;
-  padding: .25rem 1rem;
+  padding: .55rem 1rem;
 }
 
 div.join-community-header,
@@ -1314,10 +1310,9 @@ button.see-more {
   }
 
   .post {
-    margin: 0;
     background-color: var(--light-mode-main-color);
     border-radius: 0;
-    margin: 0;
+    margin: .4rem 0;
     border: 0;
     max-width: 100%;
   }
@@ -1486,10 +1481,6 @@ button.see-more {
     /* Dark background */
     color: #ddd;
     /* Light text */
-  }
-
-  .title>a {
-    color: var(--dark-mode-text-color);
   }
 
   .community-header,
