--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 :root {
   --primary-text-color: #1d2935;
   --light-mode-body-color: rgb(238, 242, 247);
@@ -29,7 +31,7 @@
 
 
   /* Font and size variables */
-  --font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+  --font-family: "Inter", sans-serif;
   --default-font-size: .9rem;
   --default-sub-font-size: .8rem;
   --navbar-button-font-size: 16px;
@@ -55,8 +57,7 @@ body {
   -webkit-font-smoothing: antialiased;
   padding-top: var(--navbar-height);
   font-family: var(--font-family);
-  font-variation-settings: "wdth" 100;
-  font-weight: 400;
+  font-optical-sizing: auto;
   font-style: normal;
   color: var(--light-mode-text-color);
 }
@@ -3067,6 +3068,17 @@ input::placeholder {
   #null-button-normal {
     padding: 0.35rem .85rem;
     height: 34px;
+  }
+
+  input[type='text'],
+  input[type='number'],
+  input[type='url'],
+  input[type='email'],
+  input[type='datetime-local'],
+  input[type='password'],
+  input[type='search'] {
+    height: auto;
+    padding: 12px 16px 12px 20px;
   }
 
 
